--- a/_data/organisations.yml
+++ b/_data/organisations.yml
@@ -6,4 +6,6 @@
   link: https://info743967.typeform.com/to/o8l610
 - name: MedPrint
   link: http://medprint.org/
+- name: Voronavirus Makers - Spain
+  link: https://www.coronavirusmakers.org
 # Copy the block above and repeat =)
