--- a/_data/hubs.yml
+++ b/_data/hubs.yml
@@ -100,7 +100,25 @@ en:
     we_offer:
       - FabLab
       - '<a href="https://www.facebook.com/groups/220120426011912/" target="_blank">Facebook-Gruppe für Bayern</a>'
-      - '<a href="https://forums.erfindergarden.de/" target="_blank">Forums Erfindergarden/</a>'      
+      - '<a href="https://forums.erfindergarden.de/" target="_blank">Forums Erfindergarden/</a>'
+  - name: brigk Makerspace, Ingolstadt
+    # Link is optional
+    link: https://www.brigk.digital/makerspace
+    country: Deutschland
+    # State / region is optional
+    state: Bayern
+    city: Ingolstadt
+    contact: '<a href="mailto:makerspace@brigk.digital">Maximilian Schmidt, makerspace@brigk.digital</a>'
+    capacity:
+      - 3x FDM-Drucker
+      - 1x SLA-Drucker
+      - Laser Cutter
+      - Tiefziehgerät
+      - Plotter
+      - CNC-Fräse
+    we_offer:
+      - Alles auf Anfrage (mit Datei)
+      - '<a href="https://www.thingiverse.com/thing:4224156" target="_blank">Corona Door Opener</a>'
 # Copy the block above and repeat =)
 de:
   - name: Hammertime Kassel
@@ -205,4 +223,22 @@ de:
       - FabLab
       - '<a href="https://www.facebook.com/groups/220120426011912/" target="_blank">Facebook-Gruppe für Bayern</a>'
       - '<a href="https://forums.erfindergarden.de/" target="_blank">Forums Erfindergarden/</a>'
-  # Copy the block above and repeat =)
+    - name: brigk Makerspace, Ingolstadt
+      # Link is optional
+      link: https://www.brigk.digital/makerspace
+      country: Deutschland
+      # State / region is optional
+      state: Bayern
+      city: Ingolstadt
+      contact: '<a href="mailto:makerspace@brigk.digital">Maximilian Schmidt, makerspace@brigk.digital</a>'
+      capacity:
+        - 3x FDM-Drucker
+        - 1x SLA-Drucker
+        - Laser Cutter
+        - Tiefziehgerät
+        - Plotter
+        - CNC-Fräse
+      we_offer:
+        - Alles auf Anfrage (mit Datei)
+        - '<a href="https://www.thingiverse.com/thing:4224156" target="_blank">Corona Door Opener</a>'
+# Copy the block above and repeat =)
