--- a/_data/makers.yml
+++ b/_data/makers.yml
@@ -56,6 +56,7 @@
   capacity:
     - 2x 300x300 Drucker
     - 1x 225x225 Drucker
+    - 1x DLP Drucker 
   contact: '<a href="mailto:info@covid19beistand.de">info@covid19beistand.de</a>'
 - name: Jan Fiedler
   country: Deutschland
