--- a/_data/makers.yml
+++ b/_data/makers.yml
@@ -56,7 +56,7 @@
   capacity:
     - 2x 300x300 Drucker
     - 1x 225x225 Drucker
-    - 1x DLP Drucker 
+    - 1x DLP Drucker
   contact: '<a href="mailto:info@covid19beistand.de">info@covid19beistand.de</a>'
 - name: Jan Fiedler
   country: Deutschland
@@ -236,7 +236,7 @@
     - 1x Cr10s pro
   contact: '<a href="jn.lenkeit@web.de">jn.lenkeit@web.de</a>'
 
-- name: ZerwasMOD
+- name: Alexander Herzig
   country: Deutschland
   # State / region is optional
   state:
