--- a/_data/makers.yml
+++ b/_data/makers.yml
@@ -352,4 +352,6 @@
     - 1x CNC Fräse Sorotec
   contact: '<a href="sir.phil@hotmail.de">sir.phil@hotmail.de</a>'
 
+Kai Praske
+
 # Copy the block above and repeat =)
