--- a/_data/equipments.yml
+++ b/_data/equipments.yml
@@ -1,4 +1,4 @@
-- name: Prusa Protective Face Shield - RC2
+- name: Prusa Protective Face Shield - RC2 - <b>Current Recommendation</b>
   link: https://www.prusaprinters.org/prints/25857-protective-face-shield-rc2
 - name: Hands-Free 3D-Printed Door Openers to Help Against the Spread of Coronavirus
   link: https://www.materialise.com/en/hands-free-door-opener
@@ -6,4 +6,6 @@
   link: https://www.opensourcemask.com/en/
 - name: Easy shields
   link: https://www.thingiverse.com/thing:4233193
+- name: Fabric face mask
+  link: https://naehtalente.de/mundschutz-selber-naehen/
 # Copy the block above and repeat =)
