--- a/_data/organisations.yml
+++ b/_data/organisations.yml
@@ -6,6 +6,8 @@
   link: https://info743967.typeform.com/to/o8l610
 - name: MedPrint
   link: http://medprint.org/
-- name: Voronavirus Makers - Spain
+- name: Coronavirus Makers - Spain
   link: https://www.coronavirusmakers.org
+- name: 3dk Against Corona
+  link: https://tutolino.net/3d-printing-against-corona/
 # Copy the block above and repeat =)
