--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -2,20 +2,23 @@ en:
   title: |
     Using our Maker skills against Corona
   subtitle: |
-    This project is intended to bring together people and organisations
+    We're bringing together people and organisations
     who need currently hard-to-find protective equipment or spare parts
-    with makers and makerspaces who can possibly produce them. Behind this
-    project is a small German and English speaking organization team.
+    with makers and makerspaces who can possibly produce them.
+  cta_need: |
+    I need PPE
+  cta_maker: |
+    I can make & help
   hint_non_profit: |
     <strong>Please note: </strong> We only list initiatives that offer
     their (self) produced items for free or at cost price.
   offer_header: |
     For people and organisations in need
   offer_registration: |
-    Registier as a Hub <a href="https://docs.google.com/forms/d/e/1FAIpQLSeXCnK1oEQh5l_5kfUDHrEDJV2M7BkVJUylFiMwsxF_K2yHLQ/viewform"_blank">here</a>.
+    We also need <b>regional hubs</b> that can provide coordination, storage and a point of contact for distribution. Register as a Hub <a href="https://docs.google.com/forms/d/e/1FAIpQLSeXCnK1oEQh5l_5kfUDHrEDJV2M7BkVJUylFiMwsxF_K2yHLQ/viewform"_blank">here</a>.
   offer_description: |
-    Find Makers and Makerspaces in the list below and contact them with
-    your needs:
+    A hub is a regional point of contact that coordinates makers and can provide means of strorage and distribution.
+    Find a hub near you in the list below and contact them with your needs. If there's no hub in your area, contact us directly at <a href="mailto:anfrage@makervsvirus.org">anfrage@makervsvirus.org</a>.
   offer_table_name: |
     Name
   offer_table_location: |
@@ -41,8 +44,8 @@ en:
     Contact
 
   support_registration: |
-    Als lokaler Maker unterstützt du deinen regionalen Hub! Sagst was du leisten kannst und schickst die Teile dann auch dort hin. <br>
-    Registiere dich <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIqflF3iAowqptV4zxMkg26spX41nKoNum_SSXNGwNyxVz0A/viewform" _blank">hier</a> als Maker.
+    As a <b>local maker</b>, you support the regional hub by 3D printing, laser cutting, sewing or else! Let us know what you can do, and then send your parts to the hub. <br>
+    Use <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIqflF3iAowqptV4zxMkg26spX41nKoNum_SSXNGwNyxVz0A/viewform" _blank">this form</a> to register.
 
   support_description: |
     <p>We're looking for people who:</p>
@@ -73,18 +76,22 @@ de:
   title: |
     Unsere Maker Skills gegen Corona
   subtitle: |
-    Dieses Projekt soll Menschen und Organisationen zusammenbringen, die aktuell dringend benötigte Schutzausrüstung oder Ersatzteile brauchen,
-    und Maker und Makerspaces, die diese möglicherweise produzieren können.
-    Hinter diesem Projekt steht ein kleines Deutsch und Englisch sprechendes Team.
+    Wir bringen Menschen/Organisationen zusammen, die dringend Schutzausrüstung oder Ersatzteile brauchen,
+    und Maker und Makerspaces, die diese produzieren können.
+  cta_need: |
+    Ich habe Bedarf
+  cta_maker: |
+    Ich kann produzieren
   hint_non_profit: |
     <strong>Bitte beachte: </strong> Wir führen nur Iniativen auf, die ihre (selbst) produzierten Artikel kostenlos oder zum Selbstkostenpreis anbieten.
   offer_header: |
     Für Menschen und Organisationen in Not
   offer_registration: |
+    Wir benötigen außerdem <b>regionale Hubs</b> als Zusammenschluss von Makern mit Koordinations - und Leitungswillen, evtl. sogar Lagerkapazität für eine zentrale Verteilung.
     Registiere dich als Hub <a href="https://docs.google.com/forms/d/e/1FAIpQLSeXCnK1oEQh5l_5kfUDHrEDJV2M7BkVJUylFiMwsxF_K2yHLQ/viewform"_blank">hier</a>.
   offer_description: |
     Ein Hub ist ein Zusammenschluss von Makern mit Koordinations - und Leitungswillen, evtl. sogar Lagerkapazität für eine zentrale Verteilung.
-    Finde Hubs in der unten stehenden Liste und kontaktiere sie mit deinem Bedarf:
+    Finde Hubs in der unten stehenden Liste und kontaktiere sie mit deinem Bedarf. Sollte es keinen Hub in deiner Nähe geben, melde dich direkt bei uns via <a href="mailto:anfrage@makervsvirus.org">anfrage@makervsvirus.org</a>.
   offer_table_name: |
     Name
   offer_table_location: |
@@ -109,7 +116,7 @@ de:
     Contact
 
   support_registration: |
-    Als lokaler Maker unterstützt du deinen regionalen Hub! Sagst was du leisten kannst und schickst die Teile dann auch dort hin. <br>
+    Als <b>lokaler Maker</b> unterstützt du deinen regionalen Hub! Sagst was du leisten kannst und schickst die Teile dann auch dort hin. <br>
     Registiere dich <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIqflF3iAowqptV4zxMkg26spX41nKoNum_SSXNGwNyxVz0A/viewform" _blank">hier</a> als Maker.
 
   support_description: |
