--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -18,7 +18,7 @@ en:
     We also need <b>regional hubs</b> that can provide coordination, storage and a point of contact for distribution. Register as a Hub <a href="https://docs.google.com/forms/d/e/1FAIpQLSeXCnK1oEQh5l_5kfUDHrEDJV2M7BkVJUylFiMwsxF_K2yHLQ/viewform"_blank">here</a>.
   offer_description: |
     A hub is a regional point of contact that coordinates makers and can provide means of strorage and distribution.
-    Find a hub near you in the list below and contact them with your needs. If there's no hub in your area, contact us directly at <a href="mailto:anfrage@makervsvirus.org">anfrage@makervsvirus.org</a>.
+    Find a hub near you in the list below and contact them with your needs.
   offer_table_name: |
     Name
   offer_table_location: |
@@ -91,7 +91,7 @@ de:
     Registiere dich als Hub <a href="https://docs.google.com/forms/d/e/1FAIpQLSeXCnK1oEQh5l_5kfUDHrEDJV2M7BkVJUylFiMwsxF_K2yHLQ/viewform"_blank">hier</a>.
   offer_description: |
     Ein Hub ist ein Zusammenschluss von Makern mit Koordinations - und Leitungswillen, evtl. sogar Lagerkapazität für eine zentrale Verteilung.
-    Finde Hubs in der unten stehenden Liste und kontaktiere sie mit deinem Bedarf. Sollte es keinen Hub in deiner Nähe geben, melde dich direkt bei uns via <a href="mailto:anfrage@makervsvirus.org">anfrage@makervsvirus.org</a>.
+    Finde Hubs in der unten stehenden Liste und kontaktiere sie mit deinem Bedarf.
   offer_table_name: |
     Name
   offer_table_location: |
